# routes/users.js
@@ -2,7 +2,7 @@ var express = require('express');
 const { register, login } = require('../src/controllers/user');
 var router = express.Router();
 
-router.post('/register', register);
-router.post('/login', login);
+router.post('/tambah-admin', register);
+router.post('/login-admin', login);
 
 module.exports = router;
