# swagger-output.json
@@ -17,7 +17,7 @@
     "http"
   ],
   "paths": {
-    "/users/register": {
+    "/users/tambah-admin": {
       "post": {
         "description": "",
         "parameters": [
@@ -35,9 +35,6 @@
                 },
                 "password": {
                   "example": "any"
-                },
-                "role": {
-                  "example": "any"
                 }
               }
             }
@@ -53,7 +50,7 @@
         }
       }
     },
-    "/users/login": {
+    "/users/login-admin": {
       "post": {
         "description": "",
         "parameters": [
@@ -85,17 +82,15 @@
         "description": "",
         "parameters": [
           {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
                 "nama": {
+                  "example": "any"
+                },
+                "email": {
                   "example": "any"
                 },
                 "telepon": {
@@ -117,9 +112,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -145,7 +137,7 @@
             "type": "string"
           },
           {
-            "name": "name",
+            "name": "search",
             "in": "query",
             "type": "string"
           }
@@ -215,6 +207,9 @@
               "type": "object",
               "properties": {
                 "nama": {
+                  "example": "any"
+                },
+                "email": {
                   "example": "any"
                 },
                 "telepon": {
